# simulavr

./: .gitignore  CMakeLists.txt  Makefile  Makefile.am  check-versions.sh.in  configure.ac  delivery-check
app/: CMakeLists.txt  dumpargs.cpp  gdbserver.cpp  main.cpp
cmake/: FindPythonModule.cmake  GetGitInfo.cmake  SimulAVRFunctions.cmake  get_git_version.sh
debian/: CMakeLists.txt  libsim.control.in  mk_debian_package.sh.in  python-simulavr.control.in  python-simulavr.postinst.in  python-simulavr.prerm.in  simulavr-dev.control.in  simulavr-tcl.control.in  simulavr-vpi.control.in  simulavr.control.in
doc/: CMakeLists.txt  SUPPORT  copyright  simulavr.texi
doc/doxygen/: CMakeLists.txt  simulavr.doxy.in
doc/sphinx/: .gitignore  CMakeLists.txt  build.rst  build_simple.rst  conf.py  conf.py.in  config.py.in  contents.rst  download.rst  examples.rst  features.rst  getdownload.py  helpwanted.rst  index.rst  intro.rst  license.rst  loader.py  simple_ex.rst  simulavr.style  todo.rst  usage.rst
doc/sphinx/_templates/: index.html  indexsidebar.html  layout.html
doc/sphinx/html/: conf.py
doc/sphinx/web/: conf.py  conf.py.in
docker/: mkimage.sh
docker/buildscripts/: bionic.build.Dockerfile  xenial.build.Dockerfile
examples/: .gitignore  gui.tcl.in  gui.tcl.sample  simulavr.tcl.sample
examples/atmega48/: .gitignore  check.tcl.sample
examples/feedback/: .gitignore  simfeedback.tcl.sample
examples/python/: adc.py  ex_pinout.py  ex_pinout.sav  ex_utils.py  example.py  example_io.py  example_pin.py  multicore.py
examples/spi/: check.tcl.sample
examples/stdiodemo/: README  checkdebug.tcl.in  checkdebug.tcl.sample  defines.h  hd44780.c
examples/verilog/: .gitignore  right-unit.s  singlepincomm.s
include/: at4433.h  at8515.h  at90canbase.h  atmega128.h  atmega1284abase.h  atmega16_32.h  atmega2560base.h  atmega668base.h  atmega8.h  attiny2313.h  attiny25_45_85.h  avrdevice.h  avrerror.h  avrfactory.h  config.h.in  flash.h  hwad.h  hwpinchange.h  hwspi.h  hwstack.h  hwusi.h  irqsystem.h  pin.h  pinatport.h  rwmem.h  specialmem.h  traceval.h
include/gdb/: gdb.h
include/hwtimer/: hwtimer.h  prescalermux.h  timerirq.h
include/ui/: lcd.h  tracecontrol.h
kbdgentables/: CMakeLists.txt  kbdgentables.cpp
libsim/: CMakeLists.txt  application.cpp  at4433.cpp  at8515.cpp  at90canbase.cpp  atmega128.cpp  atmega1284abase.cpp  atmega16_32.cpp  atmega2560base.cpp  atmega668base.cpp  atmega8.cpp  attiny2313.cpp  attiny25_45_85.cpp  avrdevice.cpp  avrerror.cpp  avrfactory.cpp  avrreadelf.cpp  avrsignature.cpp  decoder.cpp  decoder_trace.cpp  flashprog.cpp  helper.cpp  hwacomp.cpp  hwad.cpp  hweeprom.cpp  hwpinchange.cpp  hwport.cpp  hwspi.cpp  hwsreg.cpp  hwstack.cpp  hwusi.cpp  hwwado.cpp  irqsystem.cpp  memory.cpp  pin.cpp  pinatport.cpp  pinmon.cpp  rwmem.cpp  specialmem.cpp  spisink.cpp  (+5 more)
libsim/hwtimer/: hwtimer.cpp  icapturesrc.cpp  prescalermux.cpp  timerirq.cpp  timerprescaler.cpp
libsimulavr/: CMakeLists.txt  extpin.cpp  keyboard.cpp  lcd.cpp  mysocket.cpp  scope.cpp  serialrx.cpp  serialtx.cpp  simulavr.i  ui.cpp
old/regress/test_opcodes/: TODO
pysimulavr/: CMakeLists.txt  pysimulavr.i.in  setup.cfg.in  setup.py.in
regress/: CMakeLists.txt  regress.py.in
regress/avrtest/: CMakeLists.txt  run_test.sh
regress/extinttest/: CMakeLists.txt  ext_int0.py  ext_int2.py  ext_pcint.py
regress/gtest/: CMakeLists.txt  Makefile.am
regress/gtest/session_001/: unittest001.cpp
regress/gtest/session_io_pin/: unittest_io_pin.cpp
regress/gtest/session_irq_check/: tc5.cpp  unittest_irq.cpp
regress/gtest/session_trace/: tc1.s  unittest_trace.cpp
regress/modtest/: CMakeLists.txt  adc_diff_t25.py  modtest.cfg  pin.py  portio.py
regress/modules/: avr_target.py  base_test.py  create_makefile.py  gdb_rsp.py  regress_unittest.py  simtestutil.py  vcdreader.py  vcdtestutil.py
regress/tcl/: CMakeLists.txt  tcl-test.tcl  test-wrapper.sh.in
regress/test_opcodes/: TODO  test_ADC.py  test_ADD.py  test_ADIW.py  test_AND.py  test_ANDI.py  test_ASR.py  test_BCLR.py  test_BLD.py  test_BRBC.py  test_BRBS.py  test_BSET.py  test_BST.py  test_CALL.py  test_COM.py  test_CP.py  test_CPC.py  test_CPI.py  test_CPSE.py  test_DEC.py  test_EICALL.py  test_EIJMP.py  test_ELPM.py  test_ELPM_Z.py  test_ELPM_Z_incr.py  test_EOR.py  test_ICALL.py  test_IJMP.py  test_INC.py  test_JMP.py  test_LDD_Y.py  test_LDD_Z.py  test_LDI.py  test_LDS.py  test_LD_X.py  test_LD_X_decr.py  test_LD_X_incr.py  test_LD_Y_decr.py  test_LD_Y_incr.py  test_LD_Z_decr.py  (+39 more)
regress/timertest/: CMakeLists.txt  timer_16_extp.py  timer_16_icap_p.py
regress/verilog/: CMakeLists.txt
src/: Makefile.am  application.cpp  at4433.cpp  at8515.cpp  at90canbase.cpp  at90canbase.h  atmega128.cpp  atmega128.h  atmega1284abase.cpp  atmega16_32.cpp  atmega16_32.h  atmega2560base.cpp  atmega2560base.h  atmega668base.cpp  atmega8.cpp  attiny2313.cpp  attiny25_45_85.cpp  attiny25_45_85.h  avrdevice.cpp  avrdevice.h  avrdevice_helper.cpp  avrerror.cpp  avrerror.h  avrfactory.cpp  avrreadelf.cpp  decoder.cpp  decoder.h  decoder_trace.cpp  externalirq.cpp  flashprog.cpp  helper.cpp  hwacomp.cpp  hwad.cpp  hweeprom.cpp  hwpinchange.cpp  hwpinchange.h  hwport.cpp  hwport.h  hwspi.cpp  hwsreg.cpp  (+30 more)
src/cmd/: dumpargs.cpp  gdb.h  gdbserver.cpp  main.cpp
src/hwtimer/: hwtimer.cpp  timerirq.cpp
src/python/: pysimulavr.i
src/ui/: extpin.cpp  extpin.h  kbdgentables.cpp  keyboard.cpp  keyboard.h  lcd.cpp  lcd.h  mysocket.cpp  scope.cpp  serialrx.cpp  serialrx.h  serialtx.cpp  tracecontrol.h  ui.cpp
src/verilog/: avr.v
